// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<AddMessageForm /> expect to render the component correctly 1`] = `
<form
  onSubmit={[Function]}
>
  <div
    styleName="AddMessageForm__Row"
  >
    <span
      styleName="AddMessageForm__Row__Label"
    >
      Visibilité:
    </span>
    <Group>
      <Radio
        checked={true}
        id="public"
        name="visibility"
        onChange={[Function]}
        required={true}
        value="public"
      >
        <Label
          type="public"
        />
      </Radio>
      <Radio
        checked={false}
        id="private"
        name="visibility"
        onChange={[Function]}
        required={true}
        value="private"
      >
        <Label
          type="private"
        />
      </Radio>
    </Group>
  </div>
  <div
    styleName="AddMessageForm__Row"
  >
    <textarea
      name="body"
      onChange={[Function]}
      placeholder="Entrer votre message..."
      required={true}
      styleName="AddMessageForm__Row__Textarea"
      value=""
    />
  </div>
  <div
    styleName="AddMessageForm__Row"
  >
    <Submit
      disabled={false}
    >
      Envoyer
    </Submit>
  </div>
</form>
`;

exports[`<AddMessageForm /> expect to render the component correctly with body 1`] = `
<form
  onSubmit={[Function]}
>
  <div
    styleName="AddMessageForm__Row"
  >
    <span
      styleName="AddMessageForm__Row__Label"
    >
      Visibilité:
    </span>
    <Group>
      <Radio
        checked={true}
        id="public"
        name="visibility"
        onChange={[Function]}
        required={true}
        value="public"
      >
        <Label
          type="public"
        />
      </Radio>
      <Radio
        checked={false}
        id="private"
        name="visibility"
        onChange={[Function]}
        required={true}
        value="private"
      >
        <Label
          type="private"
        />
      </Radio>
    </Group>
  </div>
  <div
    styleName="AddMessageForm__Row"
  >
    <textarea
      name="body"
      onChange={[Function]}
      placeholder="Entrer votre message..."
      required={true}
      styleName="AddMessageForm__Row__Textarea"
      value="Some content"
    />
  </div>
  <div
    styleName="AddMessageForm__Row"
  >
    <Submit
      disabled={false}
    >
      Envoyer
    </Submit>
  </div>
</form>
`;

exports[`<AddMessageForm /> onSubmit expect to call onSubmit when form is submitted 1`] = `
<form
  onSubmit={[Function]}
>
  <div
    styleName="AddMessageForm__Row"
  >
    <span
      styleName="AddMessageForm__Row__Label"
    >
      Visibilité:
    </span>
    <Group>
      <Radio
        checked={true}
        id="public"
        name="visibility"
        onChange={[Function]}
        required={true}
        value="public"
      >
        <Label
          type="public"
        />
      </Radio>
      <Radio
        checked={false}
        id="private"
        name="visibility"
        onChange={[Function]}
        required={true}
        value="private"
      >
        <Label
          type="private"
        />
      </Radio>
    </Group>
  </div>
  <div
    styleName="AddMessageForm__Row"
  >
    <textarea
      name="body"
      onChange={[Function]}
      placeholder="Entrer votre message..."
      required={true}
      styleName="AddMessageForm__Row__Textarea"
      value=""
    />
  </div>
  <div
    styleName="AddMessageForm__Row"
  >
    <Submit
      disabled={true}
    >
      Envoyer
    </Submit>
  </div>
</form>
`;
